--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1532,7 +1532,7 @@
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
 }
 .dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .sender-item .media.main-media .text p {
-  color: #0D0D0D;
+  color: #0D0D0D !important;
 }
 .dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .date-status hr {
   background-color: #171717;
@@ -1582,6 +1582,31 @@
 }
 .dark-mode .create-group-form h4 {
   border-color: #1E222A;
+}
+.dark-mode .view-profile-box {
+  border-left: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+  box-shadow: -4px 4px 25px 0px rgba(142, 152, 163, 0.1);
+}
+.dark-mode .view-profile-box .profile-box .btn-remove {
+  background-color: transparent;
+  border-color: #EF6E79;
+  color: #EF6E79;
+}
+.dark-mode .view-profile-box .profile-box .btn-remove:hover {
+  background-color: #EF6E79;
+}
+.dark-mode .view-profile-box .media i {
+  color: #344054;
+}
+.dark-mode .view-profile-box .media a {
+  color: #5672FF;
+}
+.dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .react-box ul li span {
+  background-color: #121212 !important;
+}
+.dark-mode .group-room-header .dropdown .btn {
+  background-color: #171717;
 }
 
 .dark-mode-bttn {
