--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -111,6 +111,10 @@ body {
   display: none !important;
 }
 
+.mishty-clr {
+  color: #ff6189 !important;
+}
+
 .common-bttn {
   border-radius: 0.375rem;
   background: var(--primary-color-blue, #294CFF);
