--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,10 @@
     display: none !important;
 }
 
+.mishty-clr{
+    color: #ff6189!important;
+}
+
 .common-bttn {
     border-radius: 0.375rem;
     background: var(--primary-color-blue, #294CFF);
