css file cash update

--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -202,6 +202,10 @@ body {
   display: block !important;
 }
 
+.mce-notification-inner {
+  display: none !important;
+}
+
 .filter-dropdown-box {
   position: relative;
 }
