--- a/scss/style.scss
+++ b/scss/style.scss
@@ -123,6 +123,9 @@
     display: block !important;
 }
 
+.mce-notification-inner{
+    display: none!important;
+}
 
 .filter-dropdown-box {
     position: relative;
