--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -206,6 +206,11 @@ body {
   display: none !important;
 }
 
+.mce-widget.mce-notification.mce-notification-warning.mce-has-close.mce-in {
+  z-index: -9999 !important;
+  display: none !important;
+}
+
 .filter-dropdown-box {
   position: relative;
 }
