--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,6 +126,11 @@
 .mce-notification-inner{
     display: none!important;
 }
+.tox-notifications-container,
+.tox-promotion,
+.tox-statusbar{
+    display: none!important;
+}
 
 .mce-widget.mce-notification.mce-notification-warning.mce-has-close.mce-in{
     z-index: -9999!important;
