--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -355,13 +355,28 @@ span.finsihLesson {
         }
     }
 }
+ 
+.course-outline-wrap::-webkit-scrollbar {
+    width: 0.375rem;
+} 
+.course-outline-wrap::-webkit-scrollbar-track {
+    background: #E5ECF6;
+    border-radius: 0 0.625rem 0.625rem 0;
+} 
+.course-outline-wrap::-webkit-scrollbar-thumb {
+    background: #A6B1C4;
+    border-radius: 0.625rem;
+} 
+.course-outline-wrap::-webkit-scrollbar-thumb:hover {
+    background: #A6B1C4;
+}
 
 .course-outline-wrap {
     border-radius: 0.75rem;
     border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
     background: #FFF;
     padding: 1rem;
-    max-height: 560px;
+    max-height: 560px; 
     overflow-y: scroll;
 
     .header {
@@ -2920,12 +2935,12 @@ span.stripe-bg {
 }
 
 .view-as-bttn {
-    display: inline-block!important;
-    color: #1334d8!important;  
-    font-size: 0.675rem!important;
-    font-style: normal!important;
-    font-weight: 400!important;
-    line-height: 1.375rem!important; 
+    display: inline-block !important;
+    color: #1334d8 !important;
+    font-size: 0.675rem !important;
+    font-style: normal !important;
+    font-weight: 400 !important;
+    line-height: 1.375rem !important;
 }
 
 
