--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1636,7 +1636,18 @@
 .dark-mode .course-outline-wrap::-webkit-scrollbar-thumb:hover {
   background: #2F3A4C;
 }
-.dark-mode .user-details-box h1, .dark-mode .user-details-box h2, .dark-mode .user-details-box h3, .dark-mode .user-details-box h4, .dark-mode .user-details-box h5, .dark-mode .user-details-box h6, .dark-mode .user-details-box p, .dark-mode .user-details-box a, .dark-mode .user-details-box span, .dark-mode .user-details-box input, .dark-mode .user-details-box td, .dark-mode .user-details-box button {
+.dark-mode .user-details-box h1,
+.dark-mode .user-details-box h2,
+.dark-mode .user-details-box h3,
+.dark-mode .user-details-box h4,
+.dark-mode .user-details-box h5,
+.dark-mode .user-details-box h6,
+.dark-mode .user-details-box p,
+.dark-mode .user-details-box a,
+.dark-mode .user-details-box span,
+.dark-mode .user-details-box input,
+.dark-mode .user-details-box td,
+.dark-mode .user-details-box button {
   color: #F4EBFF !important;
 }
 .dark-mode .header-area .dropdown-menu .dropdown-item.active {
@@ -1657,6 +1668,37 @@
   background-color: transparent !important;
   color: #fff !important;
   border-color: #313A49 !important;
+}
+.dark-mode .common-bttn,
+.dark-mode .share-on-social-wrap .copy-link a {
+  color: #0D0D0D;
+}
+.dark-mode .common-bttn img,
+.dark-mode .share-on-social-wrap .copy-link a img {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(248deg) brightness(107%) contrast(107%);
+}
+.dark-mode .instructor-profile-update-page .create-certificate-form .certificate-name .form-control {
+  background-color: #1A1A1A !important;
+}
+.dark-mode .bundle-create-bttn .btn {
+  color: #0D0D0D;
+}
+.dark-mode .subscription-table-wrap table tr td a.btn-view {
+  background: rgba(105, 147, 255, 0.2) !important;
+  color: #7A8FFA !important;
+  border-radius: 0.375rem !important;
+}
+.dark-mode .subscription-table-wrap table tr td a.btn-export {
+  background: rgba(0, 255, 208, 0.2) !important;
+  color: #0AC5A2 !important;
+  border-radius: 0.375rem !important;
+}
+.dark-mode .social-label {
+  background: #1A1A1A !important;
+}
+.dark-mode #social_increment {
+  background: #7289FF !important;
+  color: #0D0D0D !important;
 }
 
 .dark-mode-bttn {
