--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -1862,6 +1862,17 @@
   height: 3rem;
 }
 
+.social-label {
+  top: -6px !important;
+  background: #fff !important;
+  z-index: 999 !important;
+}
+
+.cus-postion {
+  left: 20% !important;
+  top: 21% !important;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .connect-app-box {
     padding: 1rem;
