--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1983,7 +1983,7 @@
         box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
 
         p {
-            color: #0D0D0D!important;
+            color: #0D0D0D !important;
         }
     }
 
@@ -2056,97 +2056,155 @@
         box-shadow: -4px 4px 25px 0px rgba(142, 152, 163, 0.10);
     }
 
-    .view-profile-box .profile-box .btn-remove{
+    .view-profile-box .profile-box .btn-remove {
         background-color: transparent;
         border-color: #EF6E79;
         color: #EF6E79;
 
-        &:hover{
+        &:hover {
             background-color: #EF6E79;
         }
     }
 
-    .view-profile-box .media i{
+    .view-profile-box .media i {
         color: #344054;
     }
 
-    .view-profile-box .media a{
+    .view-profile-box .media a {
         color: #5672FF;
     }
 
-    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .react-box ul li span{
-        background-color: #121212!important;
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item .react-box ul li span {
+        background-color: #121212 !important;
     }
 
-    .group-room-header .dropdown .btn{
+    .group-room-header .dropdown .btn {
         background-color: #171717;
     }
-    .tox.tox-tinymce{
-        background-color: #161f29!important;
+
+    .tox.tox-tinymce {
+        background-color: #161f29 !important;
     }
 
     .user-add-box a,
-    .user-header-bttn a{
+    .user-header-bttn a {
         color: #0D0D0D;
-        img{
+
+        img {
             filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(248deg) brightness(107%) contrast(107%);
         }
     }
-    .package-list-header{
-        .common-bttn{
-            color: #0D0D0D!important;
-        }
-    } 
 
-    .add-lesson-bttn a{
-        color: #0D0D0D!important;
+    .package-list-header {
+        .common-bttn {
+            color: #0D0D0D !important;
+        }
     }
-    .course-modules-lessons-redesign p.module-title{
-        color: #C5CCD8!important;
+
+    .add-lesson-bttn a {
+        color: #0D0D0D !important;
+    }
+
+    .course-modules-lessons-redesign p.module-title {
+        color: #C5CCD8 !important;
     }
 
     // scrolbar 
     .course-outline-wrap::-webkit-scrollbar-track {
-        background: #1A1A1A; 
-    } 
+        background: #1A1A1A;
+    }
+
     .course-outline-wrap::-webkit-scrollbar-thumb {
-        background: #2F3A4C; 
-    } 
+        background: #2F3A4C;
+    }
+
     .course-outline-wrap::-webkit-scrollbar-thumb:hover {
         background: #2F3A4C;
     }
 
-    .user-details-box{
-        h1,h2,h3,h4,h5,h6,p,a,span,input,td,button{
-            color: #F4EBFF!important;
+    .user-details-box {
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p,
+        a,
+        span,
+        input,
+        td,
+        button {
+            color: #F4EBFF !important;
         }
     }
 
-    .header-area .dropdown-menu .dropdown-item.active{
+    .header-area .dropdown-menu .dropdown-item.active {
         background-color: rgba(255, 255, 255, 0.05) !important;
     }
+
     .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel:hover,
-   .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit{
-        color: #0D0D0D!important;
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit {
+        color: #0D0D0D !important;
     }
 
-    textarea.form-control{
+    textarea.form-control {
         background-color: transparent;
-        color: #fff!important;
+        color: #fff !important;
     }
 
-    .lesson-edit-form-wrap label{
-        color: #fff!important;
+    .lesson-edit-form-wrap label {
+        color: #fff !important;
     }
 
-    .top-image-upload-box{
-        .form-control{
-            background-color: transparent!important;
-            color: #fff!important;
+    .top-image-upload-box {
+        .form-control {
+            background-color: transparent !important;
+            color: #fff !important;
             border-color: #313A49 !important;
         }
     }
-    
+
+    .common-bttn,
+    .share-on-social-wrap .copy-link a {
+        color: #0D0D0D;
+
+        img {
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(248deg) brightness(107%) contrast(107%);
+        }
+    }
+
+    .instructor-profile-update-page .create-certificate-form .certificate-name .form-control {
+        background-color: #1A1A1A !important;
+    }
+
+    .bundle-create-bttn .btn {
+        color: #0D0D0D;
+    }
+
+   
+    .subscription-table-wrap table tr td a.btn-view { 
+        background: rgba(105, 147, 255, 0.20)!important;
+        color: #7A8FFA!important;
+        border-radius: 0.375rem!important;
+    }
+
+    .subscription-table-wrap table tr td a.btn-export { 
+        background: rgba(0, 255, 208, 0.20)!important;
+        color: #0AC5A2!important;
+        border-radius: 0.375rem!important;
+    } 
+
+    .social-label { 
+        background: #1A1A1A !important; 
+    }
+
+    #social_increment{
+        background: #7289FF !important; 
+        color: #0D0D0D!important;
+    }
+
 }
 
 
