--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -166,18 +166,83 @@
   border: 1px solid var(--neutral-40, #E0E0E0);
   background: var(--neutral-10, #FFF);
 }
-.user-profile-picture .cover-img img {
+.user-profile-picture .cover-img {
+  position: relative;
+  transition: ease-in-out 0.3s;
+  height: 250px;
+}
+.user-profile-picture .cover-img img.cover-img {
   display: block;
   width: 100%;
   border-radius: 10px 10px 0 0;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: ease-in-out 0.3s;
+  position: absolute;
+  left: 0;
+  top: 0;
+  min-height: 250px;
+}
+.user-profile-picture .cover-img .ol-upload {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px 10px 0 0;
+  background-color: rgba(0, 0, 0, 0.587);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  display: none;
+  padding: 1.5rem;
+  transition: ease-in-out 0.3s;
+  flex-direction: column;
+}
+.user-profile-picture .cover-img .ol-upload .icons {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 6px;
+  background-color: #fff;
+  color: #0824B4;
+  font-size: 0.875rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+}
+.user-profile-picture .cover-img .upload-form {
+  position: absolute;
+  z-index: 999;
+  right: 1rem;
+  bottom: 1rem;
+}
+.user-profile-picture .cover-img #cancelBtn {
+  cursor: pointer;
+  padding: 5px 10px;
+  font-size: 0.875rem !important;
+  background-color: #fff;
+  color: #0824B4;
+  margin-right: 0.5rem;
+}
+.user-profile-picture .cover-img #uploadBtn {
+  cursor: pointer;
+  padding: 5px 15px;
+  font-size: 0.875rem !important;
+}
+.user-profile-picture:hover .ol-upload {
+  display: flex;
 }
 .user-profile-picture .media {
-  background-color: #fff;
   padding: 1.5rem 2rem;
   padding-bottom: 3.5rem;
   align-items: flex-end;
   margin-top: -6rem;
   border-radius: 0 0 1rem 1rem;
+  position: relative;
+  z-index: 99;
 }
 .user-profile-picture .media img {
   border-radius: 6.25rem;
