cover photo done part done

--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -344,6 +344,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: 135%;
+  text-transform: capitalize;
 }
 .contact-info-box .media .media-body a {
   color: var(--primary-color-blue-dark, #0824B4);
