--- a/scss/user.scss
+++ b/scss/user.scss
@@ -387,6 +387,7 @@
                 font-style: normal;
                 font-weight: 500;
                 line-height: 135%;
+                text-transform: capitalize;
             }
 
             a {
