--- a/public/latest/assets/admin-css/message.css
+++ b/public/latest/assets/admin-css/message.css
@@ -415,21 +415,30 @@
   display: flex;
   align-items: center;
 }
+
 .chat-room-head .media .name span {
-  border-radius: 1rem;
+    border-radius: 1rem;
+    display: inline-flex;
+    padding: 0.125rem 0.5rem 0.125rem 0.375rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.125rem;
+    margin-left: 1rem;
+  }
+.chat-room-head .media .name span.online {
   background: var(--success-green-lightest, #E8F6E5);
-  display: inline-flex;
-  padding: 0.125rem 0.5rem 0.125rem 0.375rem;
-  justify-content: center;
-  align-items: center;
   color: var(--success-green-dark, #2A920B);
-  text-align: center;
-  font-size: 0.75rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.125rem;
-  margin-left: 1rem;
 }
+
+.chat-room-head .media .name span.offline {
+    background: rgb(240 237 237);
+    color: gray;
+  }
+
 .chat-room-head .media .name span i {
   font-size: 8px;
   margin-right: 0.5rem;
