--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -2205,6 +2205,10 @@
         color: #0D0D0D!important;
     }
 
+    .message-list-page-wrap .messages-box .chat-main-body-box .dock-bottom{
+        background-color: #0D0D0D;
+    }
+
 }
 
 
