--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1700,6 +1700,9 @@
   background: #7289FF !important;
   color: #0D0D0D !important;
 }
+.dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .dock-bottom {
+  background-color: #0D0D0D;
+}
 
 .dark-mode-bttn {
   z-index: 999999;
