--- a/public/latest/assets/admin-css/message.css
+++ b/public/latest/assets/admin-css/message.css
@@ -9,6 +9,8 @@
   border-right: 1px solid var(--neutral-40, #C5CCD8);
   background: var(--white, #FFF);
   border-radius: 0.5rem 0 0 0.5rem;
+  max-height: 90vh;
+  overflow-y: hidden;
 }
 .message-list-page-wrap .messages-box .chat-person-list-box .title {
   padding: 1.25rem 1rem;
@@ -150,13 +152,13 @@
   display: flex;
   padding: 2.5rem 2rem 2rem 2rem;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
   gap: 2rem;
   flex: 1 0 0;
   align-self: stretch;
-  min-height: 63rem;
-  padding-bottom: 0;
+  max-height: 40rem;
+  overflow-y: scroll;
+  padding-top: 8rem;
+  padding-bottom: 4rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item {
   max-width: 90%;
@@ -323,9 +325,28 @@
   top: 6px;
   background-color: #fff;
 }
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar {
+  width: 8px;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .dock-bottom {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+  width: 100%;
+  background-color: #fff;
+}
 .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box {
-  padding: 1.5rem 2rem;
-  padding-top: 2rem;
+  padding: 1rem 2rem;
   position: relative;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box input {
@@ -344,7 +365,7 @@
 .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .file-attach-bttns {
   position: absolute;
   right: 45px;
-  top: 40px;
+  top: 24px;
   z-index: 99;
   display: inline-flex;
   align-items: center;
@@ -377,6 +398,11 @@
   box-shadow: 0px 6px 34px 0px rgba(0, 0, 0, 0.08);
   padding: 1.25rem 1.5rem 1.1875rem 1.5rem;
   border-radius: 0 10px 0 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 .chat-room-head .media {
   align-items: center;
@@ -415,30 +441,21 @@
   display: flex;
   align-items: center;
 }
-
 .chat-room-head .media .name span {
-    border-radius: 1rem;
-    display: inline-flex;
-    padding: 0.125rem 0.5rem 0.125rem 0.375rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 0.75rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.125rem;
-    margin-left: 1rem;
-  }
-.chat-room-head .media .name span.online {
+  border-radius: 1rem;
   background: var(--success-green-lightest, #E8F6E5);
+  display: inline-flex;
+  padding: 0.125rem 0.5rem 0.125rem 0.375rem;
+  justify-content: center;
+  align-items: center;
   color: var(--success-green-dark, #2A920B);
+  text-align: center;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.125rem;
+  margin-left: 1rem;
 }
-
-.chat-room-head .media .name span.offline {
-    background: rgb(240 237 237);
-    color: gray;
-  }
-
 .chat-room-head .media .name span i {
   font-size: 8px;
   margin-right: 0.5rem;
@@ -449,6 +466,27 @@
   font-style: normal;
   font-weight: 400;
   line-height: 1.25rem;
+}
+
+.person-tab-body {
+  max-height: 40rem;
+  overflow-y: scroll;
+}
+
+.person-tab-body::-webkit-scrollbar {
+  width: 6px;
+}
+
+.person-tab-body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.person-tab-body::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.person-tab-body::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .person-suggest-box-list .single-person,
@@ -808,6 +846,8 @@
 
 .chat-main-body-box {
   position: relative;
+  max-height: 90vh;
+  overflow-y: hidden;
 }
 
 .view-profile-box {
