--- a/scss/message.scss
+++ b/scss/message.scss
@@ -191,9 +191,7 @@
 
 
 
-        .chat-main-body-box {
-
-
+        .chat-main-body-box { 
             .main-chat-room {
                 display: flex;
                 padding: 2.5rem 2rem 2rem 2rem;
@@ -731,8 +729,27 @@
     }
 }
 
+
+.create-group-form::-webkit-scrollbar {
+    width: 6px;
+}
+
+.create-group-form::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.create-group-form::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+.create-group-form::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 .create-group-form {
     padding: 1.5em;
+    max-height: 20rem;
+    overflow-y: scroll;
 
     h4 {
         color: var(--neutral-90, #101C2D);
